--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "homepage": "https://github.com/rabarbara/yet-another-email-workflow#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "eslint": "^3.16.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
     "node-sass": "^4.5.0",
