--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uncss": "^1.0.6",
+    "gulp-util": "^3.0.8",
+    "mailgun-js": "^0.8.2",
     "node-sass": "^4.5.0",
     "premailer-api": "^1.0.4"
   }
