add npm script for css

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "gulp serve"
+    "watch": "gulp serve",
+    "css": "gulp css"
   },
   "repository": {
     "type": "git",
