--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "gulp serve",
-    "css": "gulp css"
+    "css": "gulp css",
+    "build": "gulp premailer"
   },
   "repository": {
     "type": "git",
@@ -35,8 +36,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
+    "juice": "^4.0.2",
     "mailgun-js": "^0.8.2",
     "node-sass": "^4.5.0",
-    "premailer-api": "^1.0.4"
+    "premailer-gulp-juice": "^0.1.7"
   }
 }
