--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ jspm_packages
 .node_repl_history
 build
 css
+
+# credentials for external APIs
+credentials.json
+
+# Visual studio code
+.vscode/
