--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-html2txt": "^1.2.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
