--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "mailgun.js": "^2.0.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
+    "postcss-uncss": "^0.15.0",
     "premailer-gulp-juice": "^0.1.7",
     "sinon": "^1.17.7",
-    "tinify": "^1.5.0"
+    "tinify": "^1.5.0",
+    "uncss": "^0.15.0"
   }
 }
